Bug 380175 - Undo/redo does not properly work with alignment properties of form widgets
Summary: Undo/redo does not properly work with alignment properties of form widgets
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 3.1.0 Alpha
Platform: Other Linux
: NOR normal
Target Milestone: 3.0.2
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-25 10:22 UTC by Jarosław Staniek
Modified: 2017-08-05 22:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2017-05-25 10:22:55 UTC
Undo/redo does not properly work with alignment properties. 

To test:
1. Create a new empty form, insert label form widget.
2. Change vertical and horizontal alignment several time for the widget.
3. Click Undo a few times to undo all chances made to alignment
4. The same for Redo
5. Actual result: alignment does not revert to previous/next values
6. Expected result: alignment reverts to previous/next values exactly

Repeat the procedure with image box widget.
Comment 1 Jarosław Staniek 2017-06-01 20:35:47 UTC
Git commit e0bf198257421eef3a8e615f89219d17ee0a642c by Jaroslaw Staniek.
Committed on 01/06/2017 at 20:35.
Pushed by staniek into branch '3.0'.

Fix possible crashes in form undo/redo, make it properly work with alignment properties of widgets

Summary:
Undo/redo alignment fixes
+ limit image set of available alignments in widgets depending on widget class (image box is special)
Related: bug 342371, bug 348976
FIXED-IN:3.0.2

Test Plan: See https://bugs.kde.org/show_bug.cgi?id=380175#c0

Reviewers: piggz

Reviewed By: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D5969

M  +12   -2    src/formeditor/WidgetInfo.cpp
M  +18   -1    src/formeditor/WidgetInfo.h
M  +54   -49   src/formeditor/form.cpp
M  +1    -1    src/formeditor/form.h
M  +3    -0    src/formeditor/form_p.cpp
M  +14   -4    src/kexiutils/utils.cpp
M  +4    -1    src/kexiutils/utils.h
M  +2    -0    src/plugins/forms/kexidbfactory.cpp

https://commits.kde.org/kexi/e0bf198257421eef3a8e615f89219d17ee0a642c