Fix possible crashes in form undo/redo, make it properly work with alignment properties of widgets

Summary:
Undo/redo alignment fixes
+ limit image set of available alignments in widgets depending on widget class (image box is special)

BUG:380175
BUG:342371
BUG:348976
FIXED-IN:3.0.2

Test Plan: See https://bugs.kde.org/show_bug.cgi?id=380175#c0

Reviewers: piggz

Reviewed By: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D5969